7. All the Chinese stringsencoded with HTML code like &#NNNN; translated to English
8. Some styles modified for more wider fields
9. Upgrade/Convert utilities translated to English
10. All Discuz!X "readme/" files translated to English
11. UCenter upgraded to v.1.6.0
12. UCenter API Development Guide translated to English

+======================================+
   Discuz! X3.1 Release 20131122
+======================================+
Fixed multiple functional problems, stable version

+======================================+
   Discuz! X3.1 Release 20131011
+======================================+
Fixed multiple functional problems, stable version


+======================================+
   Discuz! X3.1 Release 20130923
+======================================+
ADD. Discuz! Cloud verification code, improved protection against spam-bots
ADD. Intelligent verification code strategy, without affecting the normal user operations, block ads publishing
ADD. Safety evaluation mechanisms, suggesting webmasters background settings involving safety operation
ADD. User account bodyguard, increase the difficulty of brute force account, reducing the loss of user accounts stolen

ADD. Identify malicious users function. All the malicious users posts can be processed, and users automatically banned
ADD. Whole network defense mechanisms, Blacklisted users, will limiting behavior in all the Discuz! Forum sites
IMPROVE. Waterproof wall function. Enhance all the site responce level, Limiting the maximum speed of ads posting
IMPROVE. Webmaster reporting mechanism. Reported by multiple users IP will be blacklisted

OPTIMIZE. Some interaction features steps was simplified
OPTIMIZE. Back-office functions distributed, Easy to quickly find the desired webmaster function
OPTIMIZE. Part of code, reduce the server loading when PHP parsing
FIX. Discuz! X3 existed known issues and security risks

More updates, see the official release topic

+--------------------------------------+